# qtah

./: .gitignore  AUTHORS  CHANGELOG.md  README.md  README.nix.md  add-werror.sh  build.sh  clean.sh  common.sh  install.sh  run-demo-client.sh  run-demo.sh  run-example.sh  run-server.sh  stack.yaml
lang/hs/: qtah.cabal  qtpi.cabal
lang/hs/src-demo/: Main.hs  QtpiDemo.hs
lang/hs/src-generator/: Main.hs
lang/hs/src-generator/Graphics/UI/Qtah/Internal/Generator/: Moc.hs  Module.hs  Signal.hs
lang/hs/src-generator/Graphics/UI/Qtah/Internal/Interface/: Callback.hs  Callbacks.hs  Mk.hs.inc  MkQt.hs.inc  QAbstractButton.hs  QAbstractScrollArea.hs  QApplication.hs  QBoxLayout.hs  QCoreApplication.hs  QFrame.hs  QHBoxLayout.hs  QLabel.hs  QLayout.hs  QLayoutItem.hs  QLineEdit.hs  QMainWindow.hs  QObject.hs  QPushButton.hs  QString.hs  QTextEdit.hs  QVBoxLayout.hs  QWidget.hs  QWidget.hs-boot
lang/hs/src/Graphics/UI/: Qtah.hs
lang/hs/src/Graphics/UI/Qtah/: Signal.hs  Signals.hs
qtah-cpp/: Setup.hs  default.nix  qtah-cpp.cabal
qtah-cpp/cpp/: encode.cpp  encode.hpp  event.hpp  qtah.pro  qtahopenglwindow.hpp  qtahrasterwindow.hpp  wrap_qapplication.cpp  wrap_qapplication.hpp  wrap_qcoreapplication.cpp  wrap_qcoreapplication.hpp  wrap_qformlayout.cpp  wrap_qformlayout.hpp  wrap_qgridlayout.cpp  wrap_qgridlayout.hpp  wrap_qimage.cpp  wrap_qimage.hpp  wrap_qmetaclassinfo.cpp  wrap_qmetaclassinfo.hpp  wrap_qmetaobject.cpp  wrap_qmetaobject.hpp  wrap_qobject.cpp  wrap_qobject.hpp  wrap_qstring.cpp  wrap_qstring.hpp
qtah-cpp/src/Graphics/UI/Qtah/: NothingToSeeHere.hs
qtah-examples/: Setup.hs  default.nix  qtah-examples.cabal
qtah-examples/src/: Main.hs
qtah-examples/src/Graphics/UI/Qtah/Example/: Notepad.hs
qtah-generator/: Setup.hs  default.nix  qtah-generator.cabal  qtah-listener-gen
qtah-generator/src/: Main.hs
qtah-generator/src/Graphics/UI/Qtah/Generator/: Common.hs  Empty.hs  Flag.hs  Flags.hs  Module.hs  Types.hs
qtah-generator/src/Graphics/UI/Qtah/Generator/Interface/: Callback.hs  Core.hs  EventListener.hs  Gui.hs  Imports.hs  Internal.hs  Widgets.hs
qtah-generator/src/Graphics/UI/Qtah/Generator/Interface/Core/: QAbstractItemModel.hs  QAbstractItemModel.hs-boot  QAbstractListModel.hs  QAbstractTableModel.hs  QByteArray.hs  QChar.hs  QChildEvent.hs  QCoreApplication.hs  QDate.hs  QDir.hs  QEvent.hs  QItemSelection.hs  QItemSelectionModel.hs  QItemSelectionModel.hs-boot  QItemSelectionRange.hs  QList.hs  QList.hs-boot  QLocale.hs  QMargins.hs  QMarginsF.hs  QMetaClassInfo.hs  QMetaEnum.hs  QMetaMethod.hs  QMetaObject.hs  QMetaProperty.hs  QModelIndex.hs  QObject.hs  QPalette.hs  QPersistentModelIndex.hs  QPoint.hs  QPointF.hs  QRect.hs  QRectF.hs  QSettings.hs  QSize.hs  QSizeF.hs  QString.hs  QString.hs-boot  QStringList.hs  QStringListModel.hs  (+10 more)
qtah-generator/src/Graphics/UI/Qtah/Generator/Interface/Gui/: QActionEvent.hs  QBrush.hs  QClipboard.hs  QClipboard.hs-boot  QCloseEvent.hs  QColor.hs  QCursor.hs  QDoubleValidator.hs  QEnterEvent.hs  QExposeEvent.hs  QFocusEvent.hs  QFont.hs  QFontDatabase.hs  QHideEvent.hs  QHoverEvent.hs  QIcon.hs  QIcon.hs-boot  QImage.hs  QInputEvent.hs  QIntValidator.hs  QKeyEvent.hs  QMouseEvent.hs  QMovie.hs  QOpenGLWindow.hs  QPaintDevice.hs  QPaintDeviceWindow.hs  QPaintEvent.hs  QPainter.hs  QPainterPath.hs  QPen.hs  QPixmap.hs  QPolygon.hs  QPolygonF.hs  QRasterWindow.hs  QRegion.hs  QShowEvent.hs  QStandardItemModel.hs  QSurface.hs  QTransform.hs  QValidator.hs  (+5 more)
qtah-generator/src/Graphics/UI/Qtah/Generator/Interface/Internal/: Callback.hs  EventListener.hs  SceneEventListener.hs
qtah-generator/src/Graphics/UI/Qtah/Generator/Interface/Widgets/: QAbstractButton.hs  QAbstractButton.hs-boot  QAbstractGraphicsShapeItem.hs  QAbstractItemDelegate.hs  QAbstractItemView.hs  QAbstractScrollArea.hs  QAbstractSlider.hs  QAbstractSlider.hs-boot  QAbstractSpinBox.hs  QAction.hs  QAction.hs-boot  QActionGroup.hs  QApplication.hs  QBoxLayout.hs  QButtonGroup.hs  QCheckBox.hs  QComboBox.hs  QDateEdit.hs  QDateTimeEdit.hs  QDial.hs  QDialog.hs  QDialogButtonBox.hs  QDockWidget.hs  QDockWidget.hs-boot  QDoubleSpinBox.hs  QFileDialog.hs  QFormLayout.hs  QFrame.hs  QGraphicsEllipseItem.hs  QGraphicsItem.hs  QGraphicsItem.hs-boot  QGraphicsPolygonItem.hs  QGraphicsRectItem.hs  QGraphicsScene.hs  QGraphicsScene.hs-boot  QGraphicsSceneEvent.hs  QGraphicsSceneMouseEvent.hs  QGraphicsSceneWheelEvent.hs  QGraphicsView.hs  QGridLayout.hs  (+43 more)
qtah-generator/src/Graphics/UI/Qtah/Internal/: Flag.hs  Flags.hs
qtah-generator/src/Graphics/UI/Qtah/Internal/Generator/: Common.hs  Empty.hs  Module.hs  Types.hs
qtah-generator/src/Graphics/UI/Qtah/Internal/Interface/: Callback.hs  Core.hs  EventListener.hs  Gui.hs  Imports.hs  Mk.hs.inc  MkQt.hs.inc  QAbstractButton.hs  QAbstractScrollArea.hs  QApplication.hs  QBoxLayout.hs  QCoreApplication.hs  QFrame.hs  QHBoxLayout.hs  QLabel.hs  QLayout.hs  QLayoutItem.hs  QLineEdit.hs  QMainWindow.hs  QMargins.hs  QObject.hs  QPoint.hs  QPushButton.hs  QRect.hs  QSize.hs  QString.hs  QTextEdit.hs  QVBoxLayout.hs  QWidget.hs  Qt.hs  Widgets.hs
qtah-generator/src/Graphics/UI/Qtah/Internal/Interface/Core/: QChar.hs  QChildEvent.hs  QCoreApplication.hs  QDir.hs  QEvent.hs  QList.hs  QList.hs-boot  QMargins.hs  QMarginsF.hs  QObject.hs  QPoint.hs  QPointF.hs  QRect.hs  QRectF.hs  QSize.hs  QSizeF.hs  QString.hs  QString.hs-boot  QStringList.hs  QTimerEvent.hs  QVector.hs  Types.hs
qtah-generator/src/Graphics/UI/Qtah/Internal/Interface/Gui/: QActionEvent.hs  QClipboard.hs  QClipboard.hs-boot  QCloseEvent.hs  QColor.hs  QDoubleValidator.hs  QEnterEvent.hs  QExposeEvent.hs  QFocusEvent.hs  (+12 more)
qtah/hs/: Setup.hs  default.nix  qtah.cabal  run.sh
qtah/hs/src/Graphics/UI/: Qtah.hs
qtah/hs/src/Graphics/UI/Qtah/: Event.hs  QMargins.hs  Signal.hs
qtah/hs/src/Graphics/UI/Qtah/Core/: HMargins.hs  HPoint.hs  HRect.hs  HSize.hs
qtah/hs/src/Graphics/UI/Qtah/Gui/: HColor.hs
qtah/hs/src/Graphics/UI/Qtah/H/: HMargins.hs  HPoint.hs  HRect.hs  HSize.hs
qtah/hs/tests/: Main.hs
qtah/hs/tests/Graphics/UI/Qtah/: EventTest.hs
(+105 files in other folders)
