name: qtah-cpp
version: 0.1.0
synopsis: Qt bindings for Haskell - C++ library
-- description:
homepage: http://khumba.net/projects/qtah
license: LGPL-3
license-files: LICENSE.GPL, LICENSE.LGPL
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
category: Graphics
build-type: Custom
-- extra-source-files:
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Graphics.UI.Qtah.NothingToSeeHere
  -- TODO Version bounds here.
  build-depends:
      base
    , Cabal
  build-tools: qtah-generator
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
