name: qtah-cpp
version: 0.1.0
synopsis: Qt bindings for Haskell - C++ library
-- description:
homepage: http://khumba.net/projects/qtah
license: LGPL-3
license-files: LICENSE.GPL, LICENSE.LGPL
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
category: Graphics
build-type: Custom
cabal-version: >=1.10

extra-source-files:
  cpp/encode.cpp
  cpp/encode.hpp
  cpp/event.hpp
  cpp/qtah.pro
  cpp/wrap_qapplication.cpp
  cpp/wrap_qapplication.hpp
  cpp/wrap_qcoreapplication.cpp
  cpp/wrap_qcoreapplication.hpp
  cpp/wrap_qformlayout.cpp
  cpp/wrap_qformlayout.hpp
  cpp/wrap_qgridlayout.cpp
  cpp/wrap_qgridlayout.hpp
  cpp/wrap_qstring.cpp
  cpp/wrap_qstring.hpp

flag qt4
  description: Build against Qt 4.
  default: False

flag qt5
  description: Build against Qt 5.
  default: False

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Graphics.UI.Qtah.NothingToSeeHere
  build-depends:
      base
    , Cabal
    , qtah-generator >=0.1 && <0.2
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
