name: qtah-examples
version: 0.1.0
synopsis: Example programs for Qtah Qt bindings
-- description:
homepage: http://khumba.net/projects/qtah
license: LGPL-3
license-files: LICENSE.GPL, LICENSE.LGPL
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
category: Graphics
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

executable qtah-examples
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
      Graphics.UI.Qtah.Example.Notepad
  build-depends:
      base >=4.7 && <4.9
    , binary >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , hoppy-runtime >=0.1 && <0.2
    , qtah
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
