name: qtah-generator
version: 0.1.0
synopsis: Generator for Qtah Qt bindings
-- description:
homepage: http://khumba.net/projects/qtah
license: LGPL-3
license-files: LICENSE.GPL, LICENSE.LGPL
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
category: Graphics
build-type: Simple
cabal-version: >=1.10

flag qt48
     description: Compile for Qt 4.8.
     default: False

flag qt54
     description: Compile for Qt 5.4.
     default: False

flag qrealFloat
     description: Whether Qt was configured with qreal=float instead of double.
     default: False

executable qtah-generator
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , directory >=1.2 && <1.3
    , filepath >=1.3 && <1.5
    , hoppy-generator >=0.1 && <0.2
    , hoppy-std >=0.1 && <0.2
    , haskell-src >=1.0 && <1.1
    , mtl >=2.1 && <2.3
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
      Graphics.UI.Qtah.Internal.Flag
    , Graphics.UI.Qtah.Internal.Flags
    , Graphics.UI.Qtah.Internal.Generator.Common
    , Graphics.UI.Qtah.Internal.Generator.Module
    , Graphics.UI.Qtah.Internal.Generator.Types
    , Graphics.UI.Qtah.Internal.Interface.Callback
    , Graphics.UI.Qtah.Internal.Interface.Core
    , Graphics.UI.Qtah.Internal.Interface.Core.QChar
    , Graphics.UI.Qtah.Internal.Interface.Core.QCoreApplication
    , Graphics.UI.Qtah.Internal.Interface.Core.QDir
    , Graphics.UI.Qtah.Internal.Interface.Core.QEvent
    , Graphics.UI.Qtah.Internal.Interface.Core.QList
    , Graphics.UI.Qtah.Internal.Interface.Core.QMargins
    , Graphics.UI.Qtah.Internal.Interface.Core.QObject
    , Graphics.UI.Qtah.Internal.Interface.Core.QPoint
    , Graphics.UI.Qtah.Internal.Interface.Core.QRect
    , Graphics.UI.Qtah.Internal.Interface.Core.QSize
    , Graphics.UI.Qtah.Internal.Interface.Core.QString
    , Graphics.UI.Qtah.Internal.Interface.Core.QStringList
    , Graphics.UI.Qtah.Internal.Interface.Core.Types
    , Graphics.UI.Qtah.Internal.Interface.EventListener
    , Graphics.UI.Qtah.Internal.Interface.Gui
    , Graphics.UI.Qtah.Internal.Interface.Gui.QClipboard
    , Graphics.UI.Qtah.Internal.Interface.Gui.QColor
    , Graphics.UI.Qtah.Internal.Interface.Imports
    , Graphics.UI.Qtah.Internal.Interface.Listener
    , Graphics.UI.Qtah.Internal.Interface.Widgets
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAbstractButton
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAbstractScrollArea
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAbstractSlider
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAction
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QActionGroup
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QApplication
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QButtonGroup
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QCheckBox
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QDial
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QDialog
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QFileDialog
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QFormLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QFrame
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QGridLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QGroupBox
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QHBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QLayoutItem
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMainWindow
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMenu
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMenuBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMessageBox
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QProgressBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QPushButton
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QRadioButton
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QRubberBand
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QScrollArea
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QScrollBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QSlider
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QSplitter
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QStackedLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QStatusBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QTabWidget
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QTextEdit
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QVBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QWidget
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010

  if flag(qt48)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=8
  if flag(qt54)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=4

  if flag(qrealFloat)
    cpp-options: -DQREAL_FLOAT=True
  else
    cpp-options: -DQREAL_FLOAT=False
