name: qtah-generator
version: 0.1.0
synopsis: Generator for Qtah Qt bindings
-- description:
homepage: http://khumba.net/projects/qtah
license: LGPL-3
license-files: LICENSE.GPL, LICENSE.LGPL
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2016 Bryan Gardiner
category: Graphics
build-type: Simple
cabal-version: >=1.10

flag qt4_0
     description: Compile for Qt 4.0.
     default: False

flag qt4_1
     description: Compile for Qt 4.1.
     default: False

flag qt4_2
     description: Compile for Qt 4.2.
     default: False

flag qt4_3
     description: Compile for Qt 4.3.
     default: False

flag qt4_4
     description: Compile for Qt 4.4.
     default: False

flag qt4_5
     description: Compile for Qt 4.5.
     default: False

flag qt4_6
     description: Compile for Qt 4.6.
     default: False

flag qt4_7
     description: Compile for Qt 4.7.
     default: False

flag qt4_8
     description: Compile for Qt 4.8.
     default: False

flag qt4_9
     description: Compile for Qt 4.9.
     default: False

flag qt5_0
     description: Compile for Qt 5.0.
     default: False

flag qt5_1
     description: Compile for Qt 5.1.
     default: False

flag qt5_2
     description: Compile for Qt 5.2.
     default: False

flag qt5_3
     description: Compile for Qt 5.3.
     default: False

flag qt5_4
     description: Compile for Qt 5.4.
     default: False

flag qt5_5
     description: Compile for Qt 5.5.
     default: False

flag qt5_6
     description: Compile for Qt 5.6.
     default: False

flag qt5_7
     description: Compile for Qt 5.7.
     default: False

flag qt5_8
     description: Compile for Qt 5.8.
     default: False

flag qt5_9
     description: Compile for Qt 5.9.
     default: False

flag qrealFloat
     description: Whether Qt was configured with qreal=float instead of double.
     default: False

executable qtah-generator
  build-depends:
      base >=4.7 && <4.9
    , containers >=0.5 && <0.6
    , directory >=1.2 && <1.3
    , filepath >=1.3 && <1.5
    , hoppy-generator >=0.2 && <0.3
    , hoppy-std >=0.2 && <0.3
    , haskell-src >=1.0 && <1.1
    , mtl >=2.1 && <2.3
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
      Graphics.UI.Qtah.Internal.Flag
    , Graphics.UI.Qtah.Internal.Flags
    , Graphics.UI.Qtah.Internal.Generator.Common
    , Graphics.UI.Qtah.Internal.Generator.Module
    , Graphics.UI.Qtah.Internal.Generator.Types
    , Graphics.UI.Qtah.Internal.Interface.Callback
    , Graphics.UI.Qtah.Internal.Interface.Core
    , Graphics.UI.Qtah.Internal.Interface.Core.QChar
    , Graphics.UI.Qtah.Internal.Interface.Core.QChildEvent
    , Graphics.UI.Qtah.Internal.Interface.Core.QCoreApplication
    , Graphics.UI.Qtah.Internal.Interface.Core.QDir
    , Graphics.UI.Qtah.Internal.Interface.Core.QEvent
    , Graphics.UI.Qtah.Internal.Interface.Core.QList
    , Graphics.UI.Qtah.Internal.Interface.Core.QMargins
    , Graphics.UI.Qtah.Internal.Interface.Core.QMarginsF
    , Graphics.UI.Qtah.Internal.Interface.Core.QObject
    , Graphics.UI.Qtah.Internal.Interface.Core.QPoint
    , Graphics.UI.Qtah.Internal.Interface.Core.QPointF
    , Graphics.UI.Qtah.Internal.Interface.Core.QRect
    , Graphics.UI.Qtah.Internal.Interface.Core.QRectF
    , Graphics.UI.Qtah.Internal.Interface.Core.QSize
    , Graphics.UI.Qtah.Internal.Interface.Core.QSizeF
    , Graphics.UI.Qtah.Internal.Interface.Core.QString
    , Graphics.UI.Qtah.Internal.Interface.Core.QStringList
    , Graphics.UI.Qtah.Internal.Interface.Core.QTimerEvent
    , Graphics.UI.Qtah.Internal.Interface.Core.QVector
    , Graphics.UI.Qtah.Internal.Interface.Core.Types
    , Graphics.UI.Qtah.Internal.Interface.EventListener
    , Graphics.UI.Qtah.Internal.Interface.Gui
    , Graphics.UI.Qtah.Internal.Interface.Gui.QActionEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QClipboard
    , Graphics.UI.Qtah.Internal.Interface.Gui.QCloseEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QColor
    , Graphics.UI.Qtah.Internal.Interface.Gui.QEnterEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QExposeEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QHoverEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QInputEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QKeyEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QMouseEvent
    , Graphics.UI.Qtah.Internal.Interface.Gui.QPolygon
    , Graphics.UI.Qtah.Internal.Interface.Gui.QPolygonF
    , Graphics.UI.Qtah.Internal.Interface.Gui.QRegion
    , Graphics.UI.Qtah.Internal.Interface.Gui.QWheelEvent
    , Graphics.UI.Qtah.Internal.Interface.Imports
    , Graphics.UI.Qtah.Internal.Interface.Listener
    , Graphics.UI.Qtah.Internal.Interface.Widgets
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAbstractButton
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAbstractScrollArea
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAbstractSlider
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QAction
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QActionGroup
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QApplication
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QButtonGroup
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QCheckBox
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QDial
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QDialog
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QFileDialog
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QFormLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QFrame
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QGridLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QGroupBox
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QHBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QLayoutItem
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QLineEdit
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMainWindow
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMenu
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMenuBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QMessageBox
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QProgressBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QPushButton
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QRadioButton
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QRubberBand
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QScrollArea
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QScrollBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QSlider
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QSplitter
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QStackedLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QStackedWidget
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QStatusBar
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QTabWidget
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QTextEdit
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QVBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.Widgets.QWidget
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010

  if flag(qt4_0)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=0
  if flag(qt4_1)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=1
  if flag(qt4_2)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=2
  if flag(qt4_3)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=3
  if flag(qt4_4)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=4
  if flag(qt4_5)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=5
  if flag(qt4_6)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=6
  if flag(qt4_7)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=7
  if flag(qt4_8)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=8
  if flag(qt4_9)
    cpp-options: -DQT_MAJOR=4 -DQT_MINOR=9
  if flag(qt5_0)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=0
  if flag(qt5_1)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=1
  if flag(qt5_2)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=2
  if flag(qt5_3)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=3
  if flag(qt5_4)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=4
  if flag(qt5_5)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=5
  if flag(qt5_6)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=6
  if flag(qt5_7)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=7
  if flag(qt5_8)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=8
  if flag(qt5_9)
    cpp-options: -DQT_MAJOR=5 -DQT_MINOR=9

  if flag(qrealFloat)
    cpp-options: -DQREAL_FLOAT=True
  else
    cpp-options: -DQREAL_FLOAT=False
