name:                   qtah
version:                0.1.0
synopsis:               Qt bindings for Haskell
-- description:            
license:                AGPL-3
license-file:           LICENSE
author:                 Bryan Gardiner
maintainer:             bog@khumba.net
-- copyright:              
category:               Graphics
build-type:             Simple
-- extra-source-files:     
cabal-version:          >=1.10

library
  exposed-modules:
      Graphics.UI.Qtah
    , Graphics.UI.Qtah.QAbstractButton
    , Graphics.UI.Qtah.QAbstractScrollArea
    , Graphics.UI.Qtah.QApplication
    , Graphics.UI.Qtah.QBoxLayout
    , Graphics.UI.Qtah.QCoreApplication
    , Graphics.UI.Qtah.QFrame
    , Graphics.UI.Qtah.QHBoxLayout
    , Graphics.UI.Qtah.QLabel
    , Graphics.UI.Qtah.QLayout
    , Graphics.UI.Qtah.QLayoutItem
    , Graphics.UI.Qtah.QLineEdit
    , Graphics.UI.Qtah.QMainWindow
    , Graphics.UI.Qtah.QObject
    , Graphics.UI.Qtah.QPushButton
    , Graphics.UI.Qtah.QString
    , Graphics.UI.Qtah.QTextEdit
    , Graphics.UI.Qtah.QVBoxLayout
    , Graphics.UI.Qtah.QWidget
    , Graphics.UI.Qtah.Signal
  other-modules:
      Foreign.Cppop.Generated.Qtah
    , Foreign.Cppop.Generated.QtahSignal
  other-extensions:
      NoMonomorphismRestriction
  build-depends:
      base >=4.7 && <4.8
    , binary >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , cppop
  hs-source-dirs:       src
  ghc-options:          -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language:     Haskell2010

executable qtah-generator
  build-depends:
      base >=4 && < 5
    , cppop
    , filepath >=1.3 && <1.4
    , haskell-src >=1.0 && <1.1
    , mtl >=2.2 && <2.3
  hs-source-dirs:       src-generator
  main-is:              Main.hs
  other-modules:
      Graphics.UI.Qtah.Internal.Generator.Types
    , Graphics.UI.Qtah.Internal.Generator.Signal
    , Graphics.UI.Qtah.Internal.Interface.Listener
    , Graphics.UI.Qtah.Internal.Interface.QAbstractButton
    , Graphics.UI.Qtah.Internal.Interface.QAbstractScrollArea
    , Graphics.UI.Qtah.Internal.Interface.QApplication
    , Graphics.UI.Qtah.Internal.Interface.QBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.QCoreApplication
    , Graphics.UI.Qtah.Internal.Interface.QFrame
    , Graphics.UI.Qtah.Internal.Interface.QHBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.QLayout
    , Graphics.UI.Qtah.Internal.Interface.QLayoutItem
    , Graphics.UI.Qtah.Internal.Interface.QMainWindow
    , Graphics.UI.Qtah.Internal.Interface.QObject
    , Graphics.UI.Qtah.Internal.Interface.QPushButton
    , Graphics.UI.Qtah.Internal.Interface.QString
    , Graphics.UI.Qtah.Internal.Interface.QTextEdit
    , Graphics.UI.Qtah.Internal.Interface.QVBoxLayout
    , Graphics.UI.Qtah.Internal.Interface.QWidget
  ghc-options:          -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language:     Haskell2010

-- TODO This causes problems with "cabal configure" if qtah hasn't already been
-- built.  For now, comment out this executable for the first build you do.
executable qtah-demo
  build-depends:        base >=4 && <5,
                        binary >=0.7 && <0.8,
                        bytestring >=0.10 && <0.11,
                        cppop,
                        qtah
  hs-source-dirs:       src-demo
  main-is:              Main.hs
  ghc-options:          -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language:     Haskell2010
  extra-lib-dirs:       ../../build-cpp
  extra-libraries:      qtah
