name: qtah
version: 0.1.0
synopsis: Qt bindings for Haskell
-- description:
license: AGPL-3
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
category: Graphics
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  exposed-modules:
      Graphics.UI.Qtah
    , Graphics.UI.Qtah.H.HMargins
    , Graphics.UI.Qtah.H.HPoint
    , Graphics.UI.Qtah.H.HRect
    , Graphics.UI.Qtah.H.HSize
    , Graphics.UI.Qtah.Q.QAbstractButton
    , Graphics.UI.Qtah.Q.QAbstractScrollArea
    , Graphics.UI.Qtah.Q.QApplication
    , Graphics.UI.Qtah.Q.QBoxLayout
    , Graphics.UI.Qtah.Q.QCoreApplication
    , Graphics.UI.Qtah.Q.QFrame
    , Graphics.UI.Qtah.Q.QHBoxLayout
    , Graphics.UI.Qtah.Q.QLabel
    , Graphics.UI.Qtah.Q.QLayout
    , Graphics.UI.Qtah.Q.QLayoutItem
    , Graphics.UI.Qtah.Q.QLineEdit
    , Graphics.UI.Qtah.Q.QMainWindow
    , Graphics.UI.Qtah.Q.QMargins
    , Graphics.UI.Qtah.Q.QObject
    , Graphics.UI.Qtah.Q.QPoint
    , Graphics.UI.Qtah.Q.QPushButton
    , Graphics.UI.Qtah.Q.QRect
    , Graphics.UI.Qtah.Q.QSize
    , Graphics.UI.Qtah.Q.QString
    , Graphics.UI.Qtah.Q.Qt
    , Graphics.UI.Qtah.Q.QTextEdit
    , Graphics.UI.Qtah.Q.QVBoxLayout
    , Graphics.UI.Qtah.Q.QWidget
    , Graphics.UI.Qtah.Signal
  other-modules:
      Graphics.UI.Qtah.Generated.Callback
    , Graphics.UI.Qtah.Generated.Core
    , Graphics.UI.Qtah.Generated.Listener
    , Graphics.UI.Qtah.Generated.Qt
    , Graphics.UI.Qtah.Generated.Std
    , Graphics.UI.Qtah.Generated.Widgets
  other-extensions:
      NoMonomorphismRestriction
  build-depends:
      base >=4.7 && <4.8
    , binary >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , cppop
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
