name: qtah
version: 0.1.0
synopsis: Qt bindings for Haskell
-- description:
license: AGPL-3
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
category: Graphics
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  exposed-modules:
      Graphics.UI.Qtah
    , Graphics.UI.Qtah.Core.HMargins
    , Graphics.UI.Qtah.Core.HPoint
    , Graphics.UI.Qtah.Core.HRect
    , Graphics.UI.Qtah.Core.HSize
    , Graphics.UI.Qtah.Core.QCoreApplication
    , Graphics.UI.Qtah.Core.QMargins
    , Graphics.UI.Qtah.Core.QObject
    , Graphics.UI.Qtah.Core.QPoint
    , Graphics.UI.Qtah.Core.QRect
    , Graphics.UI.Qtah.Core.QSize
    , Graphics.UI.Qtah.Core.QString
    , Graphics.UI.Qtah.Core.Types
    , Graphics.UI.Qtah.Signal
    , Graphics.UI.Qtah.Widgets.QAbstractButton
    , Graphics.UI.Qtah.Widgets.QAbstractScrollArea
    , Graphics.UI.Qtah.Widgets.QAction
    , Graphics.UI.Qtah.Widgets.QActionGroup
    , Graphics.UI.Qtah.Widgets.QApplication
    , Graphics.UI.Qtah.Widgets.QBoxLayout
    , Graphics.UI.Qtah.Widgets.QFrame
    , Graphics.UI.Qtah.Widgets.QHBoxLayout
    , Graphics.UI.Qtah.Widgets.QLabel
    , Graphics.UI.Qtah.Widgets.QLayout
    , Graphics.UI.Qtah.Widgets.QLayoutItem
    , Graphics.UI.Qtah.Widgets.QLineEdit
    , Graphics.UI.Qtah.Widgets.QMainWindow
    , Graphics.UI.Qtah.Widgets.QMenu
    , Graphics.UI.Qtah.Widgets.QMenuBar
    , Graphics.UI.Qtah.Widgets.QPushButton
    , Graphics.UI.Qtah.Widgets.QTextEdit
    , Graphics.UI.Qtah.Widgets.QVBoxLayout
    , Graphics.UI.Qtah.Widgets.QWidget
  other-modules:
      Graphics.UI.Qtah.Generated.Callback
    , Graphics.UI.Qtah.Generated.Core.QCoreApplication
    , Graphics.UI.Qtah.Generated.Core.QMargins
    , Graphics.UI.Qtah.Generated.Core.QObject
    , Graphics.UI.Qtah.Generated.Core.QPoint
    , Graphics.UI.Qtah.Generated.Core.QRect
    , Graphics.UI.Qtah.Generated.Core.QSize
    , Graphics.UI.Qtah.Generated.Core.QString
    , Graphics.UI.Qtah.Generated.Core.Types
    , Graphics.UI.Qtah.Generated.Listener
    , Graphics.UI.Qtah.Generated.Std
    , Graphics.UI.Qtah.Generated.Widgets
  other-extensions:
      NoMonomorphismRestriction
  build-depends:
      base >=4.7 && <4.8
    , binary >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , cppop
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
