name: qtah
version: 0.1.0
synopsis: Qt bindings for Haskell
-- description:
homepage: http://khumba.net/projects/qtah
license: AGPL-3
license-file: LICENSE
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015 Bryan Gardiner
category: Graphics
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

library
  exposed-modules:
      Graphics.UI.Qtah
    , Graphics.UI.Qtah.Core.HMargins
    , Graphics.UI.Qtah.Core.HPoint
    , Graphics.UI.Qtah.Core.HRect
    , Graphics.UI.Qtah.Core.HSize
    , Graphics.UI.Qtah.Core.QChar
    , Graphics.UI.Qtah.Core.QCoreApplication
    , Graphics.UI.Qtah.Core.QDir
    , Graphics.UI.Qtah.Core.QList.QWidget
    , Graphics.UI.Qtah.Core.QMargins
    , Graphics.UI.Qtah.Core.QObject
    , Graphics.UI.Qtah.Core.QPoint
    , Graphics.UI.Qtah.Core.QRect
    , Graphics.UI.Qtah.Core.QSize
    , Graphics.UI.Qtah.Core.QString
    , Graphics.UI.Qtah.Core.Types
    -- TODO This should not be exposed directly, but there is no nice interface
    -- to it right now.
    , Graphics.UI.Qtah.Generated.Std
    , Graphics.UI.Qtah.Signal
    , Graphics.UI.Qtah.Widgets.QAbstractButton
    , Graphics.UI.Qtah.Widgets.QAbstractScrollArea
    , Graphics.UI.Qtah.Widgets.QAction
    , Graphics.UI.Qtah.Widgets.QActionGroup
    , Graphics.UI.Qtah.Widgets.QApplication
    , Graphics.UI.Qtah.Widgets.QBoxLayout
    , Graphics.UI.Qtah.Widgets.QCheckBox
    , Graphics.UI.Qtah.Widgets.QDialog
    , Graphics.UI.Qtah.Widgets.QFileDialog
    , Graphics.UI.Qtah.Widgets.QFrame
    , Graphics.UI.Qtah.Widgets.QHBoxLayout
    , Graphics.UI.Qtah.Widgets.QLabel
    , Graphics.UI.Qtah.Widgets.QLayout
    , Graphics.UI.Qtah.Widgets.QLayoutItem
    , Graphics.UI.Qtah.Widgets.QLineEdit
    , Graphics.UI.Qtah.Widgets.QMainWindow
    , Graphics.UI.Qtah.Widgets.QMenu
    , Graphics.UI.Qtah.Widgets.QMenuBar
    , Graphics.UI.Qtah.Widgets.QPushButton
    , Graphics.UI.Qtah.Widgets.QSplitter
    , Graphics.UI.Qtah.Widgets.QStatusBar
    , Graphics.UI.Qtah.Widgets.QTextEdit
    , Graphics.UI.Qtah.Widgets.QVBoxLayout
    , Graphics.UI.Qtah.Widgets.QWidget
  other-modules:
      Graphics.UI.Qtah.Generated.Callback
    , Graphics.UI.Qtah.Generated.Core.QChar
    , Graphics.UI.Qtah.Generated.Core.QCoreApplication
    , Graphics.UI.Qtah.Generated.Core.QDir
    , Graphics.UI.Qtah.Generated.Core.QList.QWidget
    , Graphics.UI.Qtah.Generated.Core.QMargins
    , Graphics.UI.Qtah.Generated.Core.QObject
    , Graphics.UI.Qtah.Generated.Core.QPoint
    , Graphics.UI.Qtah.Generated.Core.QRect
    , Graphics.UI.Qtah.Generated.Core.QSize
    , Graphics.UI.Qtah.Generated.Core.QString
    , Graphics.UI.Qtah.Generated.Core.Types
    , Graphics.UI.Qtah.Generated.Listener
    , Graphics.UI.Qtah.Generated.Widgets.QAbstractButton
    , Graphics.UI.Qtah.Generated.Widgets.QAbstractScrollArea
    , Graphics.UI.Qtah.Generated.Widgets.QAction
    , Graphics.UI.Qtah.Generated.Widgets.QActionGroup
    , Graphics.UI.Qtah.Generated.Widgets.QApplication
    , Graphics.UI.Qtah.Generated.Widgets.QBoxLayout
    , Graphics.UI.Qtah.Generated.Widgets.QCheckBox
    , Graphics.UI.Qtah.Generated.Widgets.QDialog
    , Graphics.UI.Qtah.Generated.Widgets.QFileDialog
    , Graphics.UI.Qtah.Generated.Widgets.QFrame
    , Graphics.UI.Qtah.Generated.Widgets.QHBoxLayout
    , Graphics.UI.Qtah.Generated.Widgets.QLabel
    , Graphics.UI.Qtah.Generated.Widgets.QLayout
    , Graphics.UI.Qtah.Generated.Widgets.QLayoutItem
    , Graphics.UI.Qtah.Generated.Widgets.QLineEdit
    , Graphics.UI.Qtah.Generated.Widgets.QMainWindow
    , Graphics.UI.Qtah.Generated.Widgets.QMenu
    , Graphics.UI.Qtah.Generated.Widgets.QMenuBar
    , Graphics.UI.Qtah.Generated.Widgets.QPushButton
    , Graphics.UI.Qtah.Generated.Widgets.QSplitter
    , Graphics.UI.Qtah.Generated.Widgets.QStatusBar
    , Graphics.UI.Qtah.Generated.Widgets.QTextEdit
    , Graphics.UI.Qtah.Generated.Widgets.QVBoxLayout
    , Graphics.UI.Qtah.Generated.Widgets.QWidget
  other-extensions:
      NoMonomorphismRestriction
  build-depends:
      base >=4.8 && <4.9
    , binary >=0.7 && <0.8
    , bytestring >=0.10 && <0.11
    , hoppy
  hs-source-dirs: src
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  default-language: Haskell2010
  extra-libraries: qtah
